# story-teller

./: Cargo.toml  README.md
adventures/: Cargo.toml
adventures/src/: adventures.rs  lib.rs
adventures/src/adventures/: dark_harvest.rs
character/: Cargo.toml
character/src/: character.rs  lib.rs
character/src/character/: charactersheet.rs
core/: Cargo.toml
core/src/: core.rs  lib.rs
core/src/core/: create_adventures.rs  launch_adventure.rs  menu.rs  process_call_backs.rs  stat_bonus.rs  text_handeling.rs
game/: Cargo.toml
game/src/: game.rs  lib.rs  menu_system.rs
game/src/game/: set_up_game.rs
game/src/menu_system/: talk_menu.rs
menu/: Cargo.toml
menu/src/: lib.rs  menu.rs
menu/src/menu/: menu_system.rs
src/: main.rs
text_parsing/: Cargo.toml
text_parsing/src/: lib.rs
world/: Cargo.toml
world/src/: lib.rs  menu_system.rs  world.rs
world/src/menu_system/: conversation_menu.rs
world/src/world/: actions.rs  conversation.rs  person.rs  room.rs
