[package]
name = "adventures"
version = "0.1.0"
authors = ["adambalan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = {path = '../game'}
world = {path = '../world'}
core = {path = "../core"}
character = {path = "../character"}
