[package]
name = "game"
version = "0.1.0"
authors = ["adambalan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
character = {path = "../character"}
core      = {path = "../core"}
world     = {path = "../world"}
menu      = {path = "../menu"}
